# png--

./: .gitignore  CMakeLists.txt  README.md  color.hpp  config.hpp  consumer.hpp  convert_color_space.hpp  end_info.hpp  error.hpp  image.hpp  image_info.hpp  index_pixel.hpp  info.hpp  info_base.hpp  io_base.hpp  packed_pixel.hpp  palette.hpp  png.hpp  reader.hpp  require_color_space.hpp  rgb_pixel.hpp  solid_pixel_buffer.hpp  tRNS.hpp  writer.hpp
cmake/: Findm.cmake  Findpngpp.cmake  Findzstr.cmake  config.h.cin
include/: color.hpp  config.hpp  consumer.hpp  convert_color_space.hpp  end_info.hpp  error.hpp  ga_pixel.hpp  generator.hpp  gray_pixel.hpp  image.hpp  image_info.hpp  index_pixel.hpp  info.hpp  info_base.hpp  io_base.hpp  packed_pixel.hpp  palette.hpp  pixel_buffer.hpp  pixel_traits.hpp  png.hpp  reader.hpp  require_color_space.hpp  rgb_pixel.hpp  rgba_pixel.hpp  solid_pixel_buffer.hpp  stdafx.h  streaming_base.hpp  tRNS.hpp  types.hpp  writer.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  catch.hpp  color_tests.cpp  tests.cpp  tests.h  tests_color.cpp  tests_convert_color_space.cpp
